Update API, update Java and Spring version